[package]
name = "rstream-hopper"
version = "0.1.0"
edition = "2021"
authors = ["bloomingchad <antonloyed007@gmail.com>"]
license = "MPL-2.0"

[dependencies]
libmpv = "2.0.0"
crossbeam-channel = "0.5"
ratatui = { version = "0.26", default-features = false, features = ["termion", "all-widgets"] }
termion = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
flexi_logger = { version = "0.28", default-features = false }

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
